# piconet

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/piconet/: nn.h  nn.hpp
src/: CMakeLists.txt
test/: CMakeLists.txt  nn_test.cpp
